--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -10,5 +10,9 @@ nav ul li {
 
 .container {
   display: flex;
-  width: 1080px;
+  margin: auto;
+  padding: 10px;
+  width: 90%;
+  background-color: #f3f3f3;
+  border-radius: 15px;
 }
